--- a/index.html
+++ b/index.html
@@ -142,6 +142,46 @@
                 box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
             }
         }
+
+        .toggle-button {
+            background: linear-gradient(to right, #FFD700, #FFA500); /* Gradiasi kuning ke orange */
+            color: #333; /* Warna teks hitam */
+            font-size: 16px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            margin: 10px auto;
+            display: block;
+        }
+
+        .toggle-button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Papan penjelasan */
+        .content-box {
+            background: linear-gradient(to bottom, #FFD700, #FFA500); /* Gradiasi kuning ke orange */
+            color: #333; /* Warna teks hitam */
+            font-size: 16px;
+            line-height: 1.6;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Bayangan */
+            margin: 20px auto;
+            max-width: 300px; /* Ukuran papan penjelasan kecil */
+            display: none; /* Disembunyikan secara default */
+            text-align: justify;
+        }
+
+        /* Menghapus bayangan teks dari tombol dan penjelasan tombol */
+        .toggle-button, .content-box {
+            text-shadow: none;
+            color: #333; /* Teks hitam tanpa bayangan */
+        }
     </style>
 </head>
 <body>
@@ -191,7 +231,16 @@
     <ul>
         <li><b>Komisi Jaringan:</b> akan mendapatkan komisi hingga <b>10 Generasi/level</b> dari jaringan aktif yang mereka bangun.</li>
         <li><b>Komisi dari Repeat Order:</b> Passive income dari pesanan ulang pelanggan setia.</li>
-        <li><b>Akses Penjualan Produk/Jasa Pribadi:</b> Bisa menjual produk atau jasa pribadi mereka sendiri (jika punya) dengan model sistem yamg sama yaitu sistem Affiliate Network Marketing baca lebih detail klik di sini.</li>
+        <li><b>Akses Penjualan Produk/Jasa Pribadi:</b> Bisa menjual produk atau jasa pribadi mereka sendiri (jika punya) dengan model sistem yamg sama yaitu sistem Affiliate Network Marketing klik tombol "👉 Selengkapnya" di bawah untuk baca lebih detail.</li>
+        </div>
+    <button class="toggle-button" onclick="toggleContent('content-box-1')">👉 Penjelasan Ebook 1</button>
+    <div class="content-box" id="content-box-1">
+        <p>Atomic Habits</p>
+      <p>
+<p>Ingin mengubah hidupmu menjadi lebih baik? Mulailah dari hal-hal kecil. "Atomic Habits" mengajarkanmu bahwa perubahan besar dimulai dari kebiasaan kecil yang dilakukan secara konsisten. Bayangkan hidupmu seperti sebuah taman. Dengan rajin menyiram dan merawat tanaman setiap hari, tamanmu akan tumbuh subur dan indah. Begitu pula dengan kebiasaanmu. Dengan mengubah kebiasaan kecil, kamu akan melihat perubahan besar dalam hidupmu.</p>
+<p>
+      <p>Buku ini akan membantumu membangun kebiasaan positif dan menghilangkan kebiasaan buruk. James Clear, pertama pencetus metode ini, memberikan panduan praktis dan mudah diikuti untuk menerapkan perubahan dalam hidupmu. Mulai dari mengatur lingkungan sekitar, memberikan penghargaan pada diri sendiri, hingga mengatasi hambatan, semua dijelaskan secara rinci. Dengan "Atomic Habits", kamu akan memiliki semua alat yang dibutuhkan untuk mencapai tujuanmu.</p>
+    </div>
         <li><b>Gratis Landing Page /Web Eksklusif:</b> SAF menyediakan landing page profesional untuk anggota Premium seperti yang sedang anda baca sekarang.</li>
         <li><b>Bonus Tambahan:</b> akan berpeluang mendapatkan berbagai bonus seperti Bonus Spesial dan Bonus Tambahan.</li>
         <li><b>Dukungan Eksklusif:</b> Mendapatkan pelatihan, panduan bisnis, dan konsultasi untuk membantu kesuksesan bisnis mereka.</li>
