--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             text-shadow: none;
             color: #333; /* Teks hitam tanpa bayangan */
         }
+        }
     </style>
 </head>
 <body>
@@ -231,16 +232,7 @@
     <ul>
         <li><b>Komisi Jaringan:</b> akan mendapatkan komisi hingga <b>10 Generasi/level</b> dari jaringan aktif yang mereka bangun.</li>
         <li><b>Komisi dari Repeat Order:</b> Passive income dari pesanan ulang pelanggan setia.</li>
-        <li><b>Akses Penjualan Produk/Jasa Pribadi:</b> Bisa menjual produk atau jasa pribadi mereka sendiri (jika punya) dengan model sistem yamg sama yaitu sistem Affiliate Network Marketing klik tombol "👉 Selengkapnya" di bawah untuk baca lebih detail.</li>
-        </div>
-    <button class="toggle-button" onclick="toggleContent('content-box-1')">👉 Penjelasan Ebook 1</button>
-    <div class="content-box" id="content-box-1">
-        <p>Atomic Habits</p>
-      <p>
-<p>Ingin mengubah hidupmu menjadi lebih baik? Mulailah dari hal-hal kecil. "Atomic Habits" mengajarkanmu bahwa perubahan besar dimulai dari kebiasaan kecil yang dilakukan secara konsisten. Bayangkan hidupmu seperti sebuah taman. Dengan rajin menyiram dan merawat tanaman setiap hari, tamanmu akan tumbuh subur dan indah. Begitu pula dengan kebiasaanmu. Dengan mengubah kebiasaan kecil, kamu akan melihat perubahan besar dalam hidupmu.</p>
-<p>
-      <p>Buku ini akan membantumu membangun kebiasaan positif dan menghilangkan kebiasaan buruk. James Clear, pertama pencetus metode ini, memberikan panduan praktis dan mudah diikuti untuk menerapkan perubahan dalam hidupmu. Mulai dari mengatur lingkungan sekitar, memberikan penghargaan pada diri sendiri, hingga mengatasi hambatan, semua dijelaskan secara rinci. Dengan "Atomic Habits", kamu akan memiliki semua alat yang dibutuhkan untuk mencapai tujuanmu.</p>
-    </div>
+        <li><b>Akses Penjualan Produk/Jasa Pribadi:</b> Bisa menjual produk atau jasa pribadi mereka sendiri (jika punya) dengan model sistem yamg sama yaitu sistem Affiliate Network Marketing untuk baca selengkapnya klik tombol "👉 Selengkapnya" di bawah ini.</li>
         <li><b>Gratis Landing Page /Web Eksklusif:</b> SAF menyediakan landing page profesional untuk anggota Premium seperti yang sedang anda baca sekarang.</li>
         <li><b>Bonus Tambahan:</b> akan berpeluang mendapatkan berbagai bonus seperti Bonus Spesial dan Bonus Tambahan.</li>
         <li><b>Dukungan Eksklusif:</b> Mendapatkan pelatihan, panduan bisnis, dan konsultasi untuk membantu kesuksesan bisnis mereka.</li>
@@ -251,6 +243,15 @@
         Dengan sistem yang dirancang untuk mendukung setiap anggotanya, baik <b>Anggota Basic</b> maupun <b>Anggota Premium</b> kami memberikan peluang yang sama kepada mereka untuk sukses di SAF sesuai dengan kebutuhan dan tujuan mereka.
     </p>
 </div>
+    
+    <button class="toggle-button" onclick="toggleContent('content-box-1')">👉 Selengkapnya</button>
+    <div class="content-box" id="content-box-1">
+        <p>Atomic Habits</p>
+      <p>
+<p>Ingin mengubah hidupmu menjadi lebih baik? Mulailah dari hal-hal kecil. "Atomic Habits" mengajarkanmu bahwa perubahan besar dimulai dari kebiasaan kecil yang dilakukan secara konsisten. Bayangkan hidupmu seperti sebuah taman. Dengan rajin menyiram dan merawat tanaman setiap hari, tamanmu akan tumbuh subur dan indah. Begitu pula dengan kebiasaanmu. Dengan mengubah kebiasaan kecil, kamu akan melihat perubahan besar dalam hidupmu.</p>
+<p>
+      <p>Buku ini akan membantumu membangun kebiasaan positif dan menghilangkan kebiasaan buruk. James Clear, pertama pencetus metode ini, memberikan panduan praktis dan mudah diikuti untuk menerapkan perubahan dalam hidupmu. Mulai dari mengatur lingkungan sekitar, memberikan penghargaan pada diri sendiri, hingga mengatasi hambatan, semua dijelaskan secara rinci. Dengan "Atomic Habits", kamu akan memiliki semua alat yang dibutuhkan untuk mencapai tujuanmu.</p>
+    </div>
 
     <div class="content">
         <h3></h3>
