--- a/index.html
+++ b/index.html
@@ -248,14 +248,21 @@
     <p></p>
 
     <div class="container hidden-container" id="more-info">
-        <h3>Penjelasan Lengkap tentang Ikan</h3>
-        <p>Ikan adalah vertebrata berdarah dingin yang hidup di air. Ikan bernapas menggunakan insang dan sebagian besar memiliki sirip untuk bergerak.</p>
-        <h4>Macam-macam Ikan:</h4>
-        <ul>
-            <li><b>Ikan Air Tawar</b> - Contoh: Lele, Gurame, Patin</li>
-            <li><b>Ikan Air Laut</b> - Contoh: Tuna, Kakap, Salmon</li>
-            <li><b>Ikan Hias</b> - Contoh: Cupang, Koi, Guppy</li>
-        </ul>
+      <h4>Anggota Premium dapat menjual produk atau jasa di SAF</h4>
+<ul>
+    <li>Dapat menjual produk atau jasa pribadi di platform SAF.</li>
+    <li>Produk anda akan dipasarkan ke ribuan anggota SAF.</li>
+    <li>Denagn Sistem affiliate network marketing yang memungkinkan produk terjual lebih luas.</li>
+    <li>Anda bebas menentukan harga produk sendiri.</li>
+    <li>Komisi dari hasil penjualan produk akan dibagi berdasarkan sistem profit sharing.</li>
+    <li>Metode pembayaran dilakukan melalui transfer bank, e-wallet, atau metode pembayaran lainnya yang tersedia di platform.</li>
+    <li>Komisi akan dihitung secara otomatis dan masuk ke saldo akun member.</li>
+    <li>Perhitungan pembagian komisi atau profit sharing tergantung profit yang ditentukan. Untuk lebih jelasnya dapat dilihat di member area setelah bergabung sebagai anggota premium.</li>
+    <li>SAF membuka kesempatan bagi siapa saja untuk menjual barang atau jasa tanpa batasan kategori.</li>
+    <li>Semua transaksi dan perhitungan komisi dilakukan secara transparan di sistem member area.</li>
+    <li>Untuk info lebih detailnya dan tutorialnya bisa dilihat nanti di member area setelah bergabung sebagai anggota Premium.</li>
+</ul>
+        
     </div>
 
 <script>
