--- a/index.html
+++ b/index.html
@@ -250,17 +250,17 @@
     <div class="container hidden-container" id="more-info">
       <h4>Anggota Premium dapat menjual produk atau jasa di SAF</h4>
 <ul>
-    <li>Dapat menjual produk atau jasa pribadi di platform SAF.</li>
+    <li>Dapat menjual produk atau jasa pribadi apa saja di platform SAF.</li>
     <li>Produk anda akan dipasarkan ke ribuan anggota SAF.</li>
     <li>Denagn Sistem affiliate network marketing yang memungkinkan produk terjual lebih luas.</li>
     <li>Anda bebas menentukan harga produk sendiri.</li>
-    <li>Komisi dari hasil penjualan produk akan dibagi berdasarkan sistem profit sharing.</li>
+    <li>Komisi untuk para anggota dari hasil penjualan produk/jasa akan dibagi berdasarkan sistem profit sharing (Affiliate network marketing).</li>
     <li>Metode pembayaran dilakukan melalui transfer bank, e-wallet, atau metode pembayaran lainnya yang tersedia di platform.</li>
-    <li>Komisi akan dihitung secara otomatis dan masuk ke saldo akun member.</li>
-    <li>Perhitungan pembagian komisi atau profit sharing tergantung profit yang ditentukan. Untuk lebih jelasnya dapat dilihat di member area setelah bergabung sebagai anggota premium.</li>
+    <li>Profit anda dan komisi anggota akan dihitung secara otomatis dan masuk ke saldo akun member.</li>
+    <li>Perhitungan pembagian komisi atau profit sharing tergantung profit yang ditentukan anda Untuk lebih jelasnya dapat dilihat di member area setelah bergabung sebagai anggota premium.</li>
     <li>SAF membuka kesempatan bagi siapa saja untuk menjual barang atau jasa tanpa batasan kategori.</li>
     <li>Semua transaksi dan perhitungan komisi dilakukan secara transparan di sistem member area.</li>
-    <li>Untuk info lebih detailnya dan tutorialnya bisa dilihat nanti di member area setelah bergabung sebagai anggota Premium.</li>
+    <li>Untuk info lebih detailnya dan tutorialnya bisa anda lihat di member area setelah bergabung sebagai anggota Premium.</li>
 </ul>
     </div>
 
@@ -276,9 +276,9 @@
     </script>
 
     <div class="content">
-        <h3>✴💠🔹️🔷️✴️ KOMISI LANGSUNG</h3>
+        <h3>🔹️ KOMISI LANGSUNG</h3>
         <p>
-            <b>Smart Affiliate Future (SAF)</b> adalah entitas bisnis yang beroperasi secara resmi di bawah hukum Republik Indonesia. Kami berkomitmen untuk memberikan layanan terbaik kepada pelanggan kami dengan mematuhi semua peraturan yang berlaku.
+            <b>Komisi Langsung</b> adalah 
         </p>
     </div>
 
