--- a/index.html
+++ b/index.html
@@ -276,9 +276,11 @@
     </script>
 
     <div class="content">
-        <h3>🔹️ KOMISI LANGSUNG</h3>
+        
+        <h3>Komisi Affiliate Network Marketing</h3>
+        <h2>🔹️Komisi Langsung (Referral)</h2>
         <p>
-            <b>Komisi Langsung</b> adalah 
+            <b>Komisi Langsung di sebut juga Komisi Generasi 1 (G1) </b> adalah komisi yang anda dapat jika terjadi transaksi pembelian produk/jasa  apa saja oleh orang yang anda ajak/referensikan langsung melalui link Referral atau link web anda.
         </p>
     </div>
 
