--- a/index.html
+++ b/index.html
@@ -221,12 +221,13 @@
 
     <h4>2. Anggota Premium</h4>
     <p>
-        <b>Anggota Premium</b> adalah mereka yang telah dengan suka rela membeli produk SAF apa saja akan mendapatkan akses penuh ke semua fitur yang disediakan oleh SAF, menjadi anggota Basic maunpun Premium dua-duanya tidak di pungut biaya namun keanggotaan premium hanya di berikan sebagai penghargaan atau hadiah kepada anggota yang telah membeli produk SAF dengan suka rela.
+        <b>Anggota Premium</b> adalah mereka yang telah membeli produk SAF apa saja (yang ada logo SAF di pojok kanan atas pada foto produk), anggota premium akan mendapatkan akses penuh ke semua fitur yang disediakan oleh SAF, menjadi anggota Basic maunpun Premium dua-duanya tidak di pungut biaya namun keanggotaan premium hanya di berikan sebagai penghargaan atau hadiah kepada mereka yang telah membeli produk SAF dengan suka rela.
     </p>
     <p><b>Keuntungan yang akan di dapat Anggota Premium:</b></p>
     <ul>
+        <li><b>Komisi Langsung:</b> akan mendapatkan komisi langsung/Generasi 1 (G1)</li>
         <li><b>Komisi Jaringan:</b> akan mendapatkan komisi hingga <b>10 Generasi/level</b> dari jaringan aktif yang mereka bangun.</li>
-        <li><b>Komisi dari Repeat Order:</b> Passive income dari pesanan ulang pelanggan setia.</li>
+        <li><b>Akan mendapatkKomisi dari Repeat Order:</b> Passive income dari pesanan ulang pelanggan setia.</li>
         <li><b>Akses Penjualan Produk/Jasa Pribadi:</b> Bisa menjual produk atau jasa pribadi mereka sendiri (jika punya) dengan model sistem yamg sama yaitu sistem Affiliate Network Marketing untuk baca selengkapnya klik tombol "👉 Selengkapnya" di bawah ini.</li>
         <li><b>Gratis Landing Page /Web Eksklusif:</b> SAF menyediakan landing page profesional untuk anggota Premium seperti yang sedang anda baca sekarang.</li>
         <li><b>Bonus Tambahan:</b> akan berpeluang mendapatkan berbagai bonus seperti Bonus Spesial dan Bonus Tambahan.</li>
@@ -250,7 +251,7 @@
     <div class="container hidden-container" id="more-info">
       <h4>Anggota Premium dapat menjual produk atau jasa di SAF</h4>
 <ul>
-    <li>Dapat menjual produk atau jasa pribadi apa saja di platform SAF.</li>
+    <li>Dapat menjual produk atau jasa pribadi apa saja di platform SAF dengan sistem yang sama yaitu Affiliate network marketing.</li>
     <li>Produk anda akan dipasarkan ke ribuan anggota SAF.</li>
     <li>Denagn Sistem affiliate network marketing yang memungkinkan produk terjual lebih luas.</li>
     <li>Anda bebas menentukan harga produk sendiri.</li>
@@ -260,7 +261,7 @@
     <li>Perhitungan pembagian komisi atau profit sharing tergantung profit yang ditentukan anda Untuk lebih jelasnya dapat dilihat di member area setelah bergabung sebagai anggota premium.</li>
     <li>SAF membuka kesempatan bagi siapa saja untuk menjual barang atau jasa tanpa batasan kategori.</li>
     <li>Semua transaksi dan perhitungan komisi dilakukan secara transparan di sistem member area.</li>
-    <li>Untuk info lebih detailnya dan tutorialnya bisa anda lihat di member area setelah bergabung sebagai anggota Premium.</li>
+    <li>Untuk info lebih detailnya bisa anda lihat di member area setelah bergabung sebagai anggota Premium.</li>
 </ul>
     </div>
 
@@ -280,7 +281,7 @@
         <h3>Komisi Affiliate Network Marketing</h3>
         <h2>🔹️Komisi Langsung (Referral)</h2>
         <p>
-            <b>Komisi Langsung di sebut juga Komisi Generasi 1 (G1) </b> adalah komisi yang anda dapat jika terjadi transaksi pembelian produk/jasa  apa saja oleh orang yang anda ajak/referensikan langsung melalui link Referral atau link web anda.
+            <b>Komisi Langsung atau Referral di sebut juga Komisi Generasi 1 (G1) </b> adalah komisi yang anda dapat jika terjadi transaksi pembelian produk/jasa oleh orang/anggota yang anda referensikan secara langsung melalui link Referral (link web) anda yaitu sebesar ±10%-30% dari harga produk untuk melihat Komisi ini anda bisa melihatnya di daftar produk pada setiap produk di bawahnya ada keterangan G1.
         </p>
     </div>
 
