--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         .logo-large {
             display: block;
-            max-width: 60%;
+            max-width: 100%;
             margin: 1px auto;
         }
 
@@ -91,6 +91,11 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
+        .content h2 {
+            color: #FF4500;
+            text-align: center;
+        }
+        
         .content h3 {
             color: #FF4500;
             text-align: center;
@@ -278,8 +283,8 @@
 
     <div class="content">
         
-        <h3>Komisi Affiliate Network Marketing</h3>
-        <h2>🔹️ Komisi Langsung (Referral)</h2>
+        <h2>Komisi Affiliate Network Marketing</h2>
+        <h3>🔹️ Komisi Langsung (Referral)</h3>
         <p>
             <b>Komisi Langsung atau Referral di sebut juga Komisi Generasi 1 (G1) </b> adalah komisi yang anda dapat jika terjadi transaksi pembelian produk/jasa oleh orang/anggota yang anda referensikan secara langsung melalui link Referral (link web) anda yaitu sebesar ±10%-30% dari harga produk untuk melihat Komisi ini anda bisa melihatnya di daftar produk pada setiap produk di bawahnya ada keterangan G1.
         </p>
