--- a/index.html
+++ b/index.html
@@ -329,6 +329,17 @@ Kenapa saya mengambil contoh paket Ebook karena Ebook produk paling murah di SAF
 <p>
 Namun ingat jangan meremehkan uang Receh Rp 1.000 di Komis Jaringan ini jika kita kumpulkan berapa banyak income yang kita dapatkan lihat ilustrasi berikut ini:  Misalkan kita asumsikan per hari atau per minggu anda mendaftarkan 5 anggota dan melakukan transaksi pembelian Produk misal paket Ebook kemudian anggota anda menduplikasi masing-masing 5 anggota juga sampai ke dalaman 10 Generasi berapakah Komisi Jaringan yang anda dapatkan lihat tabel ilustrasi di bawah ini:
 </p>
+
+<p>Komisi Langsung (G1)dan Jaringan terjadi Pembelian Paket Ebook Rp 35.000,' </p>
+        <li)Generasi 1= 10.000</li>
+        <li)Generasi 2= 1000</li>
+        <li)Generasi 3= 1000</li>
+        <li)Generasi 5= 1000</li>
+        <li)Generasi 6= 1000</li>
+        <li)Generasi 7= 1000</li>
+        <li)Generasi 8= 1000</li>
+        <li)Generasi 9= 1000</li>
+        <li)Generasi 10= 1000</li>
     </div>
 
     <div>
@@ -336,8 +347,7 @@ Namun ingat jangan meremehkan uang Receh Rp 1.000 di Komis Jaringan ini jika kit
   </div>
 
     <div class="content">
-        <h3>Komitmen Kepatuhan Hukum</h3>
-        <p>Kami memastikan bahwa seluruh kegiatan usaha yang dilakukan oleh SAF.</p>
+        <p>Ilustrasi di atas adalah jika .</p>
         <li>Sesuai dengan peraturan perundang-undangan yang berlaku di Indonesia.</li>
         <li>Mematuhi standar etika bisnis, baik dalam pelayanan pelanggan maupun hubungan kemitraan.</li>
     </div>
