--- a/index.html
+++ b/index.html
@@ -107,9 +107,28 @@
             text-align: center;
         }
 
-        .content h5 {
-            color: #FFFFF0;
+
+body {
+            font-family: Arial, sans-serif;
             text-align: center;
+            margin: 0;
+            padding: 20px;
+            background-color: #f0f8ff;
+        }
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 28px;
+            margin-top: 30px;
+            color: #2c3e50;
+        }
+
+        h3 {
+            font-size: 20px;
+            margin-top: 30px;
+            color: #FFFFF0;
         }
 
         .container {
