--- a/index.html
+++ b/index.html
@@ -375,11 +375,13 @@ Namun ingat jangan meremehkan uang Receh Rp 1.000 di Komis Jaringan ini jika kit
     </div>
         <p></p>
   <p></p>
+    <div>
     <h2>Asumsi total penghasilan anda
 dalam 10 Generasi adalah :</h2>
             <h3>Rp 12.207,075.000,-</h3>
         <h4>[Dua Belas Miliar Dua Ratus Tujuh Juta
 Tujuh Puluh Lima Ribu Rupiah]</h4>
+    </div>
     <p></p>
     
     <div>
