--- a/index.html
+++ b/index.html
@@ -106,24 +106,20 @@
             color: #FF4500;
             text-align: center;
         }
-
-        h1 {
-            font-size: 26px;
-            text-align: center;
-        }
-        h2 {
+        
+        h5 {
             font-size: 24px;
             text-align: center;
-            color: #FF8C00;
+            color: #FF0000;
         }
 
-        h3 {
+        h6 {
             font-size: 36px;
             text-align: center;
             color: #0000FF;
         }
 
-        h4 {
+        h7 {
             font-size: 14px;
             text-align: center;
             color: #B22222;
@@ -376,11 +372,11 @@ Namun ingat jangan meremehkan uang Receh Rp 1.000 di Komis Jaringan ini jika kit
         <p></p>
   <p></p>
     <div>
-    <h2>Asumsi total penghasilan anda
-dalam 10 Generasi adalah :</h2>
-            <h3>Rp 12.207,075.000,-</h3>
-        <h4>[Dua Belas Miliar Dua Ratus Tujuh Juta
-Tujuh Puluh Lima Ribu Rupiah]</h4>
+    <h5><b>Asumsi total penghasilan anda
+dalam 10 Generasi adalah:</b></h5>
+            <h6>Rp 12.207,075.000,-</h6>
+        <h7>[Dua Belas Miliar Dua Ratus Tujuh Juta
+Tujuh Puluh Lima Ribu Rupiah]</h7>
     </div>
     <p></p>
     
