--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
         }
         
         h5 {
-            font-size: 24px;
+            font-size: 20px;
             text-align: center;
             color: #FF0000;
         }
 
         h6 {
-            font-size: 36px;
+            font-size: 32px;
             text-align: center;
             color: #0000FF;
         }
@@ -371,13 +371,10 @@ Namun ingat jangan meremehkan uang Receh Rp 1.000 di Komis Jaringan ini jika kit
     </div>
         <p></p>
   <p></p>
-    <div>
-    <h5><b>Asumsi total penghasilan anda
-dalam 10 Generasi adalah:</b></h5>
-            <h6>Rp 12.207,075.000,-</h6>
-        <h7>[Dua Belas Miliar Dua Ratus Tujuh Juta
-Tujuh Puluh Lima Ribu Rupiah]</h7>
-    </div>
+
+<h5><b>Asumsi total penghasilan anda dalam 10 Generasi dalam 10 Minggu dalah:</b></h5>
+<h6><b>Rp12.207,075.000,-</b></h6>
+<h7>[Dua Belas Miliar Dua Ratus Tujuh Juta Tujuh Puluh Lima Ribu Rupiah]</h7>
     <p></p>
     
     <div>
