--- a/index.html
+++ b/index.html
@@ -107,19 +107,20 @@
             text-align: center;
         }
         
-        h5 {
+        h4 {
             font-size: 20px;
             text-align: center;
             color: #FF0000;
         }
 
-        h6 {
+        h5 {
             font-size: 32px;
             text-align: center;
             color: #0000FF;
         }
 
-        h7 {
+        h6 {
+            text-align: center;
             font-size: 14px;
             text-align: center;
             color: #B22222;
@@ -372,9 +373,9 @@ Namun ingat jangan meremehkan uang Receh Rp 1.000 di Komis Jaringan ini jika kit
         <p></p>
   <p></p>
 
-<h5><b>Asumsi total penghasilan anda dalam 10 Generasi dalam 10 Minggu dalah:</b></h5>
-<h6><b>Rp12.207,075.000,-</b></h6>
-<h7>[Dua Belas Miliar Dua Ratus Tujuh Juta Tujuh Puluh Lima Ribu Rupiah]</h7>
+<h4><b>Asumsi total penghasilan anda dalam 10 Generasi & 10 Minggu adalah:</b></h4>
+<h5><b>Rp12.207,075.000,-</b></h5>
+<h6><b>[12 Miliar 207 Juta 75 Ribu Rupiah]</b></h6>
     <p></p>
     
     <div>
