--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             font-size: 20px;
             text-align: center;
             color: #FF0000;
+            margin-top: 30px;
         }
 
         h5 {
@@ -121,7 +122,7 @@
 
         h6 {
             text-align: center;
-            font-size: 14px;
+            font-size: 17px;
             text-align: center;
             color: #B22222;
         }
