--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ saja yang berhasil, maka hasilnya adalah:
 </div>
 
 <div class="content">
-<h6><b>Tapi ingat, ilustrasi di atas belum termasuk Repeat Order yang sangat mungkin terjadi. Seiring berjalannha waktu, SAF akan terus menambah produknya dan meningkatkan jumlah anggotanya. Semakin banyak anggota yang menjual produknya di SAF, maka semakin banyak pula produk/jasa yang tersedia di SAF dengan berbagai kategori. Hal ini akan meningkatkan transaksi jual beli di SAF.</b></h6>
+<h6><b>Tapi ingat, ilustrasi di atas belum termasuk Repeat Order yang sangat mungkin terjadi. Setiap kesempatan SAF akan terus mengupgrade dan menambah produknya serta serta meningkatkan jumlah anggotanya. Semakin banyak anggota yang menjual produknya di SAF, maka semakin banyak pula produk/jasa yang tersedia di SAF dengan berbagai kategori. Tentu hal ini akan semakin meningkatkan jumlah anggota dan transaksi jual beli di SAF.</b></h6>
 <p></p>
 <h6><b>BERSYUKURLAH kepada ALLAH SWT (TUHAN YME), karena dengan modal minimal Rp 35.000 (dengan membeli paket ebook) sekali seumur hidup, Anda bisa berpotensi menghasilkan passive income ratusan juta bahkan miliaran rupiah hanya dengan memanfaatkan handphone Anda, jika Anda menjalankan dengan serius.</b></h6>
 </div>
