--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             color: #B22222;
         }
 
-        .tombol {
+        .tombol-center {
     background-color: #007bff;
     color: #000; /* warna hitam */
     padding: 10px 20px;
@@ -471,7 +471,10 @@ Anggota premium dimulai dari Generasi ke2 - ke10</p>
     </div>
     <h4><b>Lihat daftar Ebook khusus Bonus tambahan 1 dan 2 Klik tombol di bawah ini:</b></h4>
 <br>
+<div class="tombol-center">
 <a href="https://SAFF35.github.io/Ebonus/" class="button" target="_blank">Daftar Ebook</a>
+</div>
+<br>
 <br>
 <br>
     <div>
