--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             color: #B22222;
         }
 
-        .tombol-center {
+        .tombol {
     background-color: #007bff;
     color: #000; /* warna hitam */
     padding: 10px 20px;
@@ -224,6 +224,11 @@
                 box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
             }
         }
+
+        .tombol-center { 
+            text-align: center;
+            margin-top: 20px;
+}
         
     </style>
 </head>
