--- a/index.html
+++ b/index.html
@@ -333,16 +333,18 @@
         <br>
         <h3>🔸️ Komisi Langsung (Referral)</h3>
         <p>
-            <b>Komisi Langsung atau Referral di sebut juga Komisi Generasi 1 (G1)</b> adalah komisi yang anda dapatkan jika terjadi transaksi pembelian produk/jasa oleh orang/anggota yang anda referensikan secara langsung melalui link Referral (link web) anda yaitu sebesar ±10%-30% dari harga produk untuk melihat Komisi ini anda bisa melihatnya di daftar produk pada setiap produk di bawahnya ada keterangan G1.
+            <b>Komisi Langsung atau Referral di sebut juga Komisi Generasi 1 (G1) adalah komisi yang anda dapatkan jika terjadi transaksi pembelian produk/jasa oleh orang/anggota yang anda referensikan secara langsung melalui link Referral (link web) anda yaitu sebesar ±10%-30% dari harga produk untuk melihat Komisi ini anda bisa melihatnya di daftar produk pada setiap produk di bawahnya ada keterangan G1.</b>
         </p>
-        <p>Komisi Langsung (G1) ini anda dapatkan tanpa
+        <p><b>Komisi Langsung (G1) ini anda dapatkan tanpa
 batas, semakin banyak yang mendaftar dan melakukan pembelian produk
 dari link referral/web anda maka semakin
 besar juga penghasilan anda bahkan bisa menghasilkan passive income dari Repeat order yang dilakukan oleh anggota anda tanpa batas, maka dari itu setelah anda daftar
 silahkan sebarkan link referral/web anda
 sebanyak-banyaknya ke media sosial yang anda punya
-seperti: WhatsApp, Telegram, Messenger, Facebook, Instagram, Twitter, TikTok, Youtube dll.</p>
-        <p>Jika kita asumsikan misalkan setiap hari anda bisa menjual 5 Produk Per Hari atau 35 Produk Per minggu misalkan terjadi penjualan paket Ebook Rp 35.000 Komisi Langsung/G1nya adalah Rp 10.000 maka dalam sebulan Rp 1.400.000 lihat tabel ilustrasi di bawah ini:</p>
+seperti: WhatsApp, Telegram, Messenger, Facebook, Instagram, Twitter, TikTok, Youtube dll.</b>
+        </p>
+        <p><b>Jika kita asumsikan misalkan setiap hari anda bisa menjual 5 Produk Per Hari atau 35 Produk Per minggu misalkan terjadi penjualan paket Ebook Rp 35.000 Komisi Langsung/G1nya adalah Rp 10.000 maka dalam sebulan Rp 1.400.000 lihat tabel ilustrasi di bawah ini:</b>
+        </p>
     </div>
         <b>
     <div>
