--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ dari Generasi ke2 - ke10</h4>
     </div>
     <br>
     <h5>LUAR BIASA BUKAN...!!</h5>
-   <br>
+
         <h4><b>Tapi tunggu dulu masih ada 3 macam Bonus Tambahan untuk Anggota Premium yaitu:</b></h4>
     <div class="content">
         <h2>3 Macam Bonus Tambahan</h2>
@@ -482,6 +482,87 @@ Anggota premium dimulai dari Generasi ke2 - ke10</p>
 <a href="https://SAFF35.github.io/Ebonus/" class="button" target="_blank">Daftar Ebook</a>
 </div>
 <br>
+<div class="content">
+<h3>Daftar Kursus atau Pembelajaran Online bagi Anda yang berhak mendapatkan Bonus Tambahan 3</h3>
+<p>Anda bisa memilihnya satu kursus, setiap kursus ini terdiri dari 50 sampai 100 video Pembelajaran di Website anda tidak perlu mendonwloadnya:</p>
+
+<p>1. Kursus Bisnis: Membangun Pondasi Kesuksesan dalam Dunia Bisnis</p>
+<p></p>
+
+<p>2. Kursus Digital Marketing: Mengukir Keberhasilan dalam Era Digital</p>
+<p></p>
+
+<p>3. Kursus WhatsApp Marketing: Menguasai Strategi Pemasaran Melalui WhatsApp</p>
+<p></p>
+
+<p>4. Kursus Facebook Marketing: Memanfaatkan Potensi Pemasaran di Facebook</p>
+<p></p>
+
+<p>5. Kursus Instagram Marketing: Menguasai Pemasaran di Platform Visual</p>
+<p></p>
+
+<p>6. Kursus Telegram Marketing: Menguasai Pemasaran Melalui Telegram</p>
+<p></p>
+
+<p>7. Kursus TikTok Marketing: Menguasai Pemasaran di Platform Video Pendek</p>
+<p></p>
+
+<p>8. Kursus Membuat Website Gratis atau Berbayar dan sangat mudah tanpa coding menggunakan wordpress (di HP/PC)</p>
+<p></p>
+
+<p>9. Kursus Berbagai Cara Menghasilkan Uang di Facebook</p>
+<p></p>
+
+<p>10. Kursus Facebook Ads: Menguasai Strategi Iklan Efektif di Platform Terbesar</p>
+<p></p>
+
+<p>11. Kursus Google Ads: Mengoptimalkan Kampanye Iklan Anda dengan Keahlian</p>
+<p></p>
+
+<p>12. Kursus Instagram Ads: Menguasai Pemasaran Melalui Platform Instagram</p>
+<p></p>
+
+<p>13. Kursus TikTok Ads: Menguasai Pemasaran Melalui Platform TikTok</p>
+<p></p>
+
+<p>14. Kursus SEO: Menguasai Optimasi Mesin Pencari untuk Pertumbuhan Bisnis Online</p>
+<p></p>
+
+<p>15. Kursus Microsoft Word: Menguasai Pengolahan Kata Profesional</p>
+<p></p>
+
+<p>16. Kursus Panduan Menggunakan Laptop/Komputer</p>
+<p></p>
+
+<p>17. Kursus Windows: Menguasai Sistem Operasi Modern</p>
+<p></p>
+
+<p>18. Kursus Microsoft Excel: Menguasai Spreadsheet Profesional</p>
+<p></p>
+
+<p>19. Kursus Google Sheets: Menguasai Spreadsheet dengan Google Sheets</p>
+<p></p>
+
+<p>20. Kursus Microsoft PowerPoint: Menguasai Presentasi Visual yang Mengesankan</p>
+<p></p>
+
+<p>21. Kursus Microsoft Office: Menguasai Suite Perangkat Lunak Produktivitas</p>
+<p></p>
+
+<p>22. Kursus Adobe Photoshop: Menguasai Seni Manipulasi Visual</p>
+<p></p>
+
+<p>23. Kursus Adobe Illustrator: Mengembangkan Kreativitas dalam Desain Grafis</p>
+<p></p>
+
+<p>24. Kursus Adobe XD: Merancang Antarmuka Pengguna yang Menarik dan Responsif</p>
+<p></p>
+
+<p>25. Kursus CorelDRAW: Menguasai Seni Desain Grafis yang Kreatif</p>
+<p></p>
+```
+
+Anda dapat menyalin kode di atas dan memasukkannya ke dalam halaman web Anda.
 <br>
 <br>
     <div>
