--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 </head>
 <body>
     <header>
-        Komisi
+        Komisi dan Bonus
     </header>
     <nav>
         <a href="Https://SAFF35.github.io">Home</a>
